--- a/Kaboom/Views/KaboomCellControl.xaml
+++ b/Kaboom/Views/KaboomCellControl.xaml
@@ -8,6 +8,7 @@
              mc:Ignorable="d" 
              d:DataContext="{x:Static DesignData:SampleData.CellOne}">
         <Image Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Center"
+               Margin="1,1,1,1"
                Source="{Binding State, Mode=OneWay, Converter={Converters:CellStateToIconSourceConverter}}"
                Stretch="Fill"
                />
