--- a/Kaboom/Views/KaboomCellControl.xaml
+++ b/Kaboom/Views/KaboomCellControl.xaml
@@ -4,12 +4,53 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:DesignData="clr-namespace:Com.Revo.Games.Kaboom.DesignerSampleData"
-             xmlns:Converters="clr-namespace:Com.Revo.Games.Kaboom.Converters"
              mc:Ignorable="d" 
              d:DataContext="{x:Static DesignData:SampleData.CellOne}">
         <Image Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Center"
                Margin="1,1,1,1"
-               Source="{Binding State, Mode=OneWay, Converter={Converters:CellStateToIconSourceConverter}}"
-               Stretch="Fill"
-               />
+               Stretch="Fill">
+            <Image.Style>
+                <Style TargetType="Image">
+                    <Setter Property="Source" Value="{StaticResource ImgClosed}"/>
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding State}" Value="Closed">
+                        <Setter Property="Source" Value="{StaticResource ImgClosed}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Empty">
+                        <Setter Property="Source" Value="{StaticResource ImgEmpty}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Mine">
+                        <Setter Property="Source" Value="{StaticResource ImgMine}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Flagged">
+                        <Setter Property="Source" Value="{StaticResource ImgFlagged}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours1">
+                        <Setter Property="Source" Value="{StaticResource ImgOne}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours2">
+                        <Setter Property="Source" Value="{StaticResource ImgTwo}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours3">
+                        <Setter Property="Source" Value="{StaticResource ImgThree}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours4">
+                        <Setter Property="Source" Value="{StaticResource ImgFour}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours5">
+                        <Setter Property="Source" Value="{StaticResource ImgFive}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours6">
+                        <Setter Property="Source" Value="{StaticResource ImgSix}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours7">
+                        <Setter Property="Source" Value="{StaticResource ImgSeven}"/>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding State}" Value="Neighbours8">
+                        <Setter Property="Source" Value="{StaticResource ImgEight}"/>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+            </Image.Style>
+        </Image>
 </UserControl>
