Refactored to allow internal cell state as preparation for "Kaboom"-calculation. Added radiobutton to decide between game modes

--- a/Kaboom/Views/MainWindow.xaml
+++ b/Kaboom/Views/MainWindow.xaml
@@ -14,11 +14,17 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <DockPanel>
-        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="4,2,4,2">
+        <StackPanel DockPanel.Dock="Top" Margin="4,2,4,2">
+        <StackPanel Orientation="Horizontal" >
             <Button Command="{Binding BeginnerCommand}" Padding="2" Margin="0,2,2,2">X</Button>
             <Button Command="{Binding AdvancedCommand}" Padding="2" Margin="2">XX</Button>
             <Button Command="{Binding ExpertCommand}" Padding="2" Margin="2">XXX</Button>
             <Button Command="{Binding UserDefinedCommand}" Padding="2" Margin="2">Custom...</Button>
+        </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,2,2,2">
+                <RadioButton Margin="0,0,2,0" IsChecked="{Binding UseMinesweeper}">Minesweeper</RadioButton>
+                <RadioButton Margin="2,0,2,0" IsChecked="{Binding UseKaboom}">Kaboom</RadioButton>
+            </StackPanel>
         </StackPanel>
         <Label DockPanel.Dock="Bottom" Content="{Binding Board.State, Mode=OneWay}" Margin="4,2,4,2"/>
         <Views:KaboomBoardControl Margin="4,0,4,0" DataContext="{Binding Board, Mode=OneWay}"/>
