--- a/Kaboom/Views/KaboomCellControl.xaml
+++ b/Kaboom/Views/KaboomCellControl.xaml
@@ -8,7 +8,7 @@
              d:DataContext="{x:Static DesignData:SampleData.Cell}">
         <Image Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Center"
                Margin="1,1,1,1"
-               Stretch="Fill">
+               Stretch="None">
             <Image.Style>
                 <Style TargetType="Image">
                     <Setter Property="Source" Value="{StaticResource ImgClosed}"/>
