--- a/Kaboom/Views/KaboomCellControl.xaml
+++ b/Kaboom/Views/KaboomCellControl.xaml
@@ -6,87 +6,108 @@
              xmlns:DesignData="clr-namespace:Com.Revo.Games.Kaboom.DesignerSampleData"
              mc:Ignorable="d" 
              d:DataContext="{x:Static DesignData:SampleData.Cell}">
+    <Border BorderBrush="LightGray" BorderThickness="1">
+        <Border.Style>
+            <Style TargetType="Border">
+                <Setter Property="Background" Value="Transparent"></Setter>
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding DebugState}" Value="None">
+                        <Setter Property="Background" Value="Transparent"></Setter>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding DebugState}" Value="Mine">
+                        <Setter Property="Background" Value="Red"></Setter>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding DebugState}" Value="Free">
+                        <Setter Property="Background" Value="Green"></Setter>
+                    </DataTrigger>
+                    <DataTrigger Binding="{Binding DebugState}" Value="Indeterminate">
+                        <Setter Property="Background" Value="Yellow"></Setter>
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+        </Border.Style>
         <Image Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Center"
                Margin="1,1,1,1"
                Stretch="None">
             <Image.Style>
                 <Style TargetType="Image">
                     <Setter Property="Source" Value="{StaticResource ImgClosed}"/>
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding State}" Value="Closed">
-                        <Setter Property="Source" Value="{StaticResource ImgClosed}"/>
-                    </DataTrigger>
-                    <DataTrigger Binding="{Binding State}" Value="Mine">
-                        <Setter Property="Source" Value="{StaticResource ImgMine}"/>
-                    </DataTrigger>
-                    <DataTrigger Binding="{Binding State}" Value="Flagged">
-                        <Setter Property="Source" Value="{StaticResource ImgFlagged}"/>
-                    </DataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="0"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgEmpty}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="1"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgOne}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="2"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgTwo}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="3"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgThree}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="4"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgFour}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="5"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgFive}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="6"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgSix}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="7"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgSeven}"/>
-                    </MultiDataTrigger>
-                    <MultiDataTrigger>
-                        <MultiDataTrigger.Conditions>
-                            <Condition Binding="{Binding State}" Value="Open"/>
-                            <Condition Binding="{Binding AdjacentMines}" Value="8"/>
-                        </MultiDataTrigger.Conditions>
-                        <Setter Property="Source" Value="{StaticResource ImgEight}"/>
-                    </MultiDataTrigger>
-                </Style.Triggers>
-            </Style>
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding State}" Value="Closed">
+                            <Setter Property="Source" Value="{StaticResource ImgClosed}"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding State}" Value="Mine">
+                            <Setter Property="Source" Value="{StaticResource ImgMine}"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding State}" Value="Flagged">
+                            <Setter Property="Source" Value="{StaticResource ImgFlagged}"/>
+                        </DataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="0"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgEmpty}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="1"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgOne}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="2"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgTwo}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="3"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgThree}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="4"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgFour}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="5"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgFive}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="6"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgSix}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="7"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgSeven}"/>
+                        </MultiDataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding State}" Value="Open"/>
+                                <Condition Binding="{Binding AdjacentMines}" Value="8"/>
+                            </MultiDataTrigger.Conditions>
+                            <Setter Property="Source" Value="{StaticResource ImgEight}"/>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
             </Image.Style>
         </Image>
+    </Border>
 </UserControl>
