--- a/Kaboom/Views/MainWindow.xaml
+++ b/Kaboom/Views/MainWindow.xaml
@@ -14,19 +14,23 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Margin="4,2,4,2">
-        <StackPanel Orientation="Horizontal" >
-            <Button Command="{Binding BeginnerCommand}" Padding="2" Margin="0,2,2,2">X</Button>
-            <Button Command="{Binding AdvancedCommand}" Padding="2" Margin="2">XX</Button>
-            <Button Command="{Binding ExpertCommand}" Padding="2" Margin="2">XXX</Button>
-            <Button Command="{Binding UserDefinedCommand}" Padding="2" Margin="2">Custom...</Button>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Game">
+                <MenuItem Header="New" Command="{Binding RestartCommand}"/>
+                <Separator/>
+                <MenuItem Header="Beginner" Command="{Binding BeginnerCommand}" IsCheckable="true" IsChecked="{Binding BeginnerChecked, Mode=OneWay}"/>
+                <MenuItem Header="Advanced" Command="{Binding AdvancedCommand}" IsCheckable="true" IsChecked="{Binding AdvancedChecked, Mode=OneWay}"/>
+                <MenuItem Header="Expert" Command="{Binding ExpertCommand}" IsCheckable="true" IsChecked="{Binding ExpertChecked, Mode=OneWay}"/>
+                <MenuItem Header="Custom..." Command="{Binding UserDefinedCommand}" IsCheckable="true" IsChecked="{Binding CustomChecked, Mode=OneWay}"/>
+                <Separator/>
+                <MenuItem Header="Exit" Command="{Binding ExitCommand}"/>
+            </MenuItem>
+        </Menu>
+        <StackPanel>
+            <Grid HorizontalAlignment="Center">
+                <Button Command="{Binding RestartCommand}" Content="{Binding Board.State}"  ToolTip="Click to restart"/>
+            </Grid>
+            <Views:KaboomBoardControl Margin="4,0,4,4" DataContext="{Binding Board, Mode=OneWay}"/>
         </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,2,2,2">
-                <RadioButton Margin="0,0,2,0" IsChecked="{Binding UseMinesweeper}">Minesweeper</RadioButton>
-                <RadioButton Margin="2,0,2,0" IsChecked="{Binding UseKaboom}">Kaboom</RadioButton>
-            </StackPanel>
-        </StackPanel>
-        <Label DockPanel.Dock="Bottom" Content="{Binding Board.State, Mode=OneWay}" Margin="4,2,4,2"/>
-        <Views:KaboomBoardControl Margin="4,0,4,0" DataContext="{Binding Board, Mode=OneWay}"/>
     </DockPanel>
 </Window>
