--- a/Kaboom/Views/MainWindow.xaml
+++ b/Kaboom/Views/MainWindow.xaml
@@ -40,9 +40,9 @@
             </MenuItem>
         </Menu>
         <StackPanel>
-            <Button Command="{Binding RestartCommand}" 
+            <Button Command="{Binding RestartCommand}" HorizontalAlignment="Right" Margin="2,2,4,2"
                     FontFamily="{StaticResource SevenSegmentFont}" FontSize="20" Foreground="{Binding Board.StateColor}"
-                    Background="Transparent" BorderThickness="0" Content="{Binding Board.State}" ToolTip="Click to restart"/>
+                    Background="Black" BorderThickness="0" Content="{Binding Board.State}" ToolTip="Click to restart"/>
             <Views:KaboomBoardControl Margin="4,0,4,4" DataContext="{Binding Board, Mode=OneWay}"/>
         </StackPanel>
     </DockPanel>
